@@ -1419,11 +1419,17 @@ if( isset(PH::$args['stats']) )
 {
     $pan->display_statistics();
     echo "\n";
+    $processedLocations = Array();
     foreach( $objectsToProcess as &$record )
     {
         if( get_class($record['store']->owner) != 'PanoramaConf' && get_class($record['store']->owner) != 'PANConf' )
         {
-            $record['store']->owner->display_statistics();
+            /** @var DeviceGroup|VirtualSystem $sub */
+            $sub = $record['store']->owner;
+            if( isset($processedLocations[$sub->name()]) )
+                continue;
+
+            $sub->display_statistics();
             echo "\n";
         }
     }
